<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.shininet.bukkit</groupId>
        <artifactId>PlayerHeads</artifactId>
        <version>5.21.0-SNAPSHOT</version>
    </parent>
    <artifactId>PlayerHeads-compatibility</artifactId>
    <packaging>pom</packaging>
    
    <modules>
        <module>PlayerHeads-compatibility-api</module>
        <module>PlayerHeads-compatibility-lib</module>
    </modules>
    
    
    <organization>
        <name>ShiniNet</name>
        <url>http://www.shininet.org</url>
    </organization>
    
    <licenses>
        <license>
            <name>Mozilla Public License 2.0</name>
            <url>http://mozilla.org/MPL/2.0/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:crashdemons/PlayerHeads.git</developerConnection>
        <connection>scm:git:git://github.com/crashdemons/PlayerHeads.git</connection>
        <url>https://github.com/crashdemons/PlayerHeads/tree/master/</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/crashdemons/PlayerHeads/issues</url>
    </issueManagement>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <!-- fix errors when using pockermock under JDK 17 -->
                  <argLine>-Dfile.encoding=UTF8 --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.util.regex=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>